# coartintator

./: .gitignore  Makefile  pyproject.toml
coartintator/: __init__.py  entities.py  main.py  repo.py
coartintator/crawling_strategy/: __init__.py  factory.py  twitter.py  youtube.py
coartintator/downloading_strategy/: __init__.py  factory.py  youtube.py
coartintator/markdown/: __init__.py
coartintator/services/: __init__.py  feed_crawler.py  feed_updater.py  post_downloader.py  post_summarizer.py  post_updater.py
docs/: PLAN.md  README.md  STORIES.md  diagrams.md
scripts/: combine.py  get_video_description.py  get_video_transcript.py  get_videos_scrapetube.py  get_videos_youtube_api.py  parse_time.py  split_text.py
tests/: conftest.py  test_filename.py  test_repo.py
tests/assets/test_feed_crawler/fakes_data/: youtube_videos_feed_1.json
tests/assets/test_feed_crawler/vault_after/feeds/: feed_1.md
tests/assets/test_feed_crawler/vault_before/feeds/: feed_1.md
tests/assets/test_file_based_repo/posts/: post_1.md  post_2.md
tests/test_crawling_strategy/: test_youtube.py
tests/test_downloading_strategy/: test_youtube.py
tests/test_entities/: test_feed.py  test_post.py  test_post_set.py
tests/test_markdown/: test_extract_section.py  test_get_links.py  test_get_wikilinks.py  test_remove_sections.py
tests/test_services/: test_post_updater.py
